nav bar spacing fix

--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ nav{
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    padding: 20px;
     /* End Owner: Kacy Hyndman*/
     /* Specify the background color */
     background-color: rgb(40,40,40);
